<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:id="@+id/settings_container">

    <TextView
        android:id="@+id/settings_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="51dp"
        android:text="@string/settings"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="105dp">

        <TextView
            android:id="@+id/darkMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_mode"
            android:textSize="17sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkModeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="1.2"
            android:scaleY="1.2" />

    </LinearLayout>

    <Button
        android:id="@+id/notificationsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/notifications" />

</FrameLayout>