<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <LinearLayout
        android:id="@+id/profile_info_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@id/profile_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/name_frame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/sample_first_name"
                    android:textSize="18sp" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/last_name_frame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp">

                <EditText
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/display_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/sample_last_name"
                    android:textSize="18sp" />

            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:id="@+id/email_frame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp">

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/display_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/sample_email"
                    android:textSize="18sp" />

            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save_profile"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="99dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>